--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
+  "homepage": "https://tonsterr.github.io/birthday-calendar",
   "name": "birthday-calendar",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "latest",
@@ -17,19 +21,43 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "axios": "^1.2.2",
+    "babel-jest": "^29.3.1",
     "date-fns": "latest",
     "dayjs": "latest",
+    "jest-environment-jsdom": "^29.3.1",
     "lodash": "^4.17.21",
+    "mockdate": "^3.0.5",
     "react": "latest",
     "react-dom": "latest",
+    "ts-jest": "^29.0.3",
     "typescript": "latest"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "gh-pages": "^4.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.3.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    },
+    "preset": "ts-jest",
+    "transform": {
+      "^.+\\.ts$": "ts-jest",
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
